@@ -4,6 +4,14 @@
     $i
 </%args>
 <tr>
-<td class='summaryKey'><% $item->{key} %></td>
-<td id='<% $namespace . '_' . $i %>' class='summaryValue'><% $item->{value} %></td>
+  <td class='summaryKey'><% $item->{key} %></td>
+  <td id='<% $namespace . '_' . $i %>'
+% if ($item->{value_type} eq 'warning') {
+      class='summaryValue summaryWarning'
+% } else {
+      class='summaryValue'
+% }
+     >
+      <% $item->{value} %>
+  </td> 
 </tr>
